# AK-Masterlist-Scraper

./: .gitignore  JSTOR_ArchiveTitles_2022-05-26.xlsx  Masterlist_Scraper.py  Metadata.json  input.json  inputs.json  journal_title_scraper.py  masterlist_scraper.py  nordvpn.py  proxy.py  pyproject.toml  recaptcha_solver.py  rotateIP.py  scraper_log.txt  scraperlog.txt  start.json  temp_storage.py  test.py  vpn.py
